Implement InterpreterGroup